objects/Fake_Report_Data_Object__c.object
<CustomObject>
    <description>What: Used by Dashboard Magic for Analytics Tool. DO NOT REMOVE/CHANGE.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <inlineHelpText>Customers won&apos;t see this value, it&apos;s just something to associate all the values together so they show up on the same report</inlineHelpText>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Primary Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <formula>Value__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Grouping__c</fullName>
        <label>Secondary Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fake Report Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Fakes</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Label__c</columns>
        <columns>Secondary_Grouping__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fakes</label>
    </listViews>
    <nameField>
        <displayFormat>FK-{0000}</displayFormat>
        <label>Fake Report Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fake Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>